--- a/xemlich.html
+++ b/xemlich.html
@@ -84,6 +84,7 @@
                         <th>Sĩ số</th>
                         <th>CL</th>
                         <th>TH</th>
+                        <th>Thứ</th>
                         <th>Tiết BD</th>
                         <th>ST</th>
                         <th>Phòng</th>
@@ -145,6 +146,7 @@
                                                 <td rowspan="2" style="vertical-align : middle;text-align:center;">`+ 45 + `</td>
                                                 <td rowspan="2" style="vertical-align : middle;text-align:center;">`+ 45 + `</td>
                                                 <td style="vertical-align : middle;text-align:center;">*</td>
+                                                <td style="vertical-align : middle;text-align:center;">`+ course.dayPractice +`</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ course.group.practiceShift.startLesson + `</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ 4 + `</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ course.group.practiceRoom.name + `</td>
@@ -152,6 +154,8 @@
                                             </tr>
                                             <tr>
                                                 <td ></td>
+                                                <td style="vertical-align : middle;text-align:center;">`+ course.dayPractice +`</td>
+                                                <td style="vertical-align : middle;text-align:center;">`+ course.group.day +`</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ course.group.shift1.startLesson + `</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ 2 + `</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ course.group.room.name + `</td>
@@ -180,6 +184,7 @@
                                             </tr>
                                             <tr>
                                                 <td></td>
+                                                <td style="vertical-align : middle;text-align:center;">`+ course.group.day +`</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ course.group.shift1.startLesson + `</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ 2 + `</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ course.group.room.name + `</td>
@@ -205,6 +210,7 @@
                                                 <td rowspan="1" style="vertical-align : middle;text-align:center;">`+ 45 + `</td>
                                                 <td rowspan="1" style="vertical-align : middle;text-align:center;">`+ 45 + `</td>
                                                 <td></td>
+                                                <td style="vertical-align : middle;text-align:center;">`+ course.group.day +`</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ course.group.shift1.startLesson + `</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ 2 + `</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ course.group.room.name + `</td>
@@ -226,6 +232,7 @@
                                                 <td rowspan="2" style="vertical-align : middle;text-align:center;">`+ 45 + `</td>
                                                 <td rowspan="2" style="vertical-align : middle;text-align:center;">`+ 45 + `</td>
                                                 <td></td>
+                                                <td style="vertical-align : middle;text-align:center;">`+ course.group.day +`</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ course.group.shift1.startLesson + `</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ 2 + `</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ course.group.room.name + `</td>
