--- a/xemlich.html
+++ b/xemlich.html
@@ -240,6 +240,7 @@
                                             </tr>
                                             <tr>
                                                 <td></td>
+                                                <td style="vertical-align : middle;text-align:center;">`+ course.group.day +`</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ course.group.shift2.startLesson + `</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ 2 + `</td>
                                                 <td style="vertical-align : middle;text-align:center;">`+ course.group.room.name + `</td>
